<resources>
    <string name="app_name">RefillingApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="manual">Manual</string>
    <string name="hint_user_name">UserName</string>
    <string name="hint_password">Password</string>
    <string name="btn_login_txt">Login</string>
    <string name="change_pwd">Change Password</string>
    <string name="logout">Logout</string>
    <string name="item">Item</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="stock_in_hand">Stock In-Hand</string>
    <string name="shorts">Shorts</string>
    <string name="mrp">MRP</string>
    <string name="demand">Demand</string>
    <string name="caselot">Caselot</string>
    <string name="create_task">Create Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="welcome_user">Welcome,&#160;</string>

    <string name="err_login">Please enter user name</string>
    <string name="err_pwd">Please Enter a Password</string>
    <string name="total_articles">Total Articles</string>
    <string name="go">GO</string>
    <string name="search_row_no">Search Row No</string>
    <string name="sort_by">Sort By</string>
    <string name="sequence">Sequence</string>
    <string name="sequence_demand">Sequence/Demand</string>

    <string-array name="dashboard">
        <item>Create Task</item>
        <item>Review Task</item>
    </string-array>
    <string-array name="create_task_dashboard">
        <item>Select FC Row</item>
        <item>Scan Articles</item>
    </string-array>
    <string-array name="sortBy">
        <item>Sequence</item>
        <item>Demand</item>
    </string-array>
    <string name="title_activity_scan_article">ScanArticleActivity</string>
    <string name="scan_article">Scan Article</string>
    <string name="enter_ean_or_description">Enter EAN or Description</string>
    <string name="clear">Clear</string>
    <string name="login">Login</string>
    <string name="fc_row">FC Row</string>
    <string name="search_article">Search Article</string>
    <string name="refilling_task">Refilling Task</string>
    <string name="enter_refilling_details">Enter Refilling Details</string>
    <string name="enter_caselot_qty">Caselot Qty</string>
    <string name="total_qty_ea">Total Qty (EA)</string>
    <string name="high_priority">High Priority</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="task_created_successfully">Task Created Successfully</string>
    <string name="caselot_qty">Caselot Qty</string>
    <string name="priority">Priority</string>
    <string name="re_enter_task_details">Re-enter Task Details</string>
    <string name="reason_for_change">Reason for change *</string>
    <string name="proceed">Proceed</string>
    <string name="close_task">Close Task</string>
    <string name="do_you_want_to_close_the_task">Do you want to close the task?</string>
    <string name="refilling_qty">Refilling Qty</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="digits_number">1234567890</string>
    <string name="last_refilling_details">Last Refilling Details</string>
    <string name="user">User</string>
    <string name="qty">Qty</string>
    <string name="time">Time</string>
    <string name="comment">Comment</string>
</resources>