<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="in.dmart.enterprise.refilling.model.apimodel.task.review.article.response.ReviewTaskArticle" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/close_task"
            android:textColor="#fff"
            android:textSize="@dimen/x_large_text_size"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@color/magenta_700"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <in.dmart.enterprise.refilling.ui.lib.view.CustomTextView
            android:id="@+id/label_refilling_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_you_want_to_close_the_task"
            android:textStyle="bold"
            android:textSize="@dimen/large_text_size"
            android:layout_marginTop="@dimen/l_margin"
            android:layout_marginStart="@dimen/l_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:ignore="RtlCompat" />

        <in.dmart.enterprise.refilling.ui.lib.view.LblTextView
            android:id="@+id/label_item_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item"
            android:layout_marginTop="@dimen/l_margin"
            app:layout_constraintStart_toStartOf="@id/label_refilling_details"
            app:layout_constraintTop_toBottomOf="@id/label_refilling_details" />

        <in.dmart.enterprise.refilling.ui.lib.view.CustomTextView
            android:id="@+id/tv_item_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:text="@{model.itemId}"
            app:layout_constraintStart_toEndOf="@id/label_item_id"
            app:layout_constraintTop_toTopOf="@id/label_item_id"
            tools:text="3224558"
            tools:ignore="RtlCompat" />

        <in.dmart.enterprise.refilling.ui.lib.view.LblTextView
            android:id="@+id/label_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="@id/label_refilling_details"
            app:layout_constraintTop_toBottomOf="@id/label_item_id" />

        <in.dmart.enterprise.refilling.ui.lib.view.CustomTextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:text="@{model.description}"
            app:layout_constraintStart_toEndOf="@id/label_item_name"
            app:layout_constraintTop_toTopOf="@id/label_item_name"
            tools:text="Quaker Oats"
            tools:ignore="RtlCompat" />

        <in.dmart.enterprise.refilling.ui.lib.view.LblTextView
            android:id="@+id/label_refilling_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refilling_qty"
            app:layout_constraintStart_toStartOf="@id/label_refilling_details"
            app:layout_constraintTop_toBottomOf="@id/tv_item_name" />

        <in.dmart.enterprise.refilling.ui.lib.view.CustomTextView
            android:id="@+id/tv_refilling_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            app:layout_constraintStart_toEndOf="@id/label_refilling_qty"
            app:layout_constraintTop_toTopOf="@id/label_refilling_qty"
            tools:text="4 Caselot (40 Unit)"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginEnd="@dimen/_5dp"
            android:layout_marginTop="@dimen/l_margin"
            app:layout_constraintTop_toBottomOf="@id/label_refilling_qty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_yes" />

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginEnd="@dimen/_5dp"
            app:layout_constraintTop_toTopOf="@id/btn_no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_no" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>