<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="in.dmart.enterprise.refilling.model.apimodel.task.review.article.response.ReviewTaskArticle" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Edit Task"
            android:textColor="#fff"
            android:textSize="@dimen/x_large_text_size"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@color/magenta_700"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <in.dmart.enterprise.refilling.ui.lib.view.LblTextView
            android:id="@+id/label_reenter_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/re_enter_task_details"
            android:textSize="@dimen/large_text_size"
            android:layout_marginTop="@dimen/l_margin"
            android:layout_marginStart="@dimen/l_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:ignore="RtlCompat" />

        <in.dmart.enterprise.refilling.ui.lib.view.LblTextView
            android:id="@+id/label_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item"
            app:layout_constraintStart_toStartOf="@id/label_reenter_details"
            app:layout_constraintTop_toBottomOf="@id/label_reenter_details" />

        <in.dmart.enterprise.refilling.ui.lib.view.CustomTextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:text="@{model.description}"
            app:layout_constraintStart_toEndOf="@id/label_item_name"
            app:layout_constraintTop_toTopOf="@id/label_item_name"
            app:layout_constraintBottom_toBottomOf="@id/label_item_name"
            tools:text="Quaker Oats"
            tools:ignore="RtlCompat" />

        <in.dmart.enterprise.refilling.ui.lib.view.LblTextView
            android:id="@+id/label_mrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mrp"
            app:layout_constraintStart_toStartOf="@id/label_reenter_details"
            app:layout_constraintTop_toBottomOf="@id/tv_item_name" />

        <in.dmart.enterprise.refilling.ui.lib.view.CustomTextView
            android:id="@+id/tv_mrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:text="@{model.mrp}"
            app:layout_constraintStart_toEndOf="@id/label_mrp"
            app:layout_constraintTop_toTopOf="@id/label_mrp"
            app:layout_constraintBottom_toBottomOf="@id/label_mrp"
            tools:text="500"
            tools:ignore="RtlCompat"
            android:textStyle="bold"
            android:textColor="@color/ligth_green_900"/>

        <in.dmart.enterprise.refilling.ui.lib.view.LblTextView
            android:id="@+id/label_caselot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caselot"
            android:layout_marginEnd="@dimen/_10dp"
            app:layout_constraintEnd_toStartOf="@id/tv_caselot"
            app:layout_constraintTop_toTopOf="@id/label_mrp"
            tools:ignore="RtlCompat"
            android:visibility="gone"/>

        <in.dmart.enterprise.refilling.ui.lib.view.CustomTextView
            android:id="@+id/tv_caselot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/l_margin"
            android:text="@{model.caseLotQty}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/label_caselot"
            app:layout_constraintBottom_toBottomOf="@id/label_caselot"
            tools:text="20"
            tools:ignore="RtlCompat"
            android:visibility="gone"/>

        <in.dmart.enterprise.refilling.ui.lib.view.LblTextView
            android:id="@+id/label_short"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shorts"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/label_reenter_details"
            app:layout_constraintTop_toBottomOf="@id/tv_mrp" />

        <in.dmart.enterprise.refilling.ui.lib.view.CustomTextView
            android:id="@+id/tv_short"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:text="@{model.shorts}"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@id/label_short"
            app:layout_constraintTop_toTopOf="@id/label_short"
            app:layout_constraintBottom_toBottomOf="@id/label_short"
            tools:text="0"
            tools:ignore="RtlCompat" />

        <in.dmart.enterprise.refilling.ui.lib.view.LblTextView
            android:id="@+id/label_demand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demand"
            android:layout_marginEnd="@dimen/_10dp"
            app:layout_constraintEnd_toStartOf="@id/tv_demand"
            app:layout_constraintTop_toTopOf="@id/label_short"
            tools:ignore="RtlCompat"
            android:visibility="gone"/>

        <in.dmart.enterprise.refilling.ui.lib.view.CustomTextView
            android:id="@+id/tv_demand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/l_margin"
            android:text="@{model.demand}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/label_demand"
            app:layout_constraintBottom_toBottomOf="@id/label_demand"
            tools:text="100"
            tools:ignore="RtlCompat"
            android:visibility="gone"/>

        <in.dmart.enterprise.refilling.ui.lib.view.LblTextView
            android:id="@+id/label_caselot_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_caselot_qty"
            android:textSize="@dimen/large_text_size"
            android:layout_marginTop="@dimen/l_margin"
            app:layout_constraintStart_toStartOf="@id/label_reenter_details"
            app:layout_constraintTop_toBottomOf="@id/tv_short"
            tools:ignore="RtlCompat" />

        <in.dmart.enterprise.refilling.ui.lib.view.CustomEditText
            android:id="@+id/et_caselot_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="80dp"
            android:layout_marginStart="@dimen/_10dp"
            android:gravity="top"
            android:inputType="number"
            android:digits="@string/digits_number"
            android:background="@drawable/border_primary_rounded"
            android:padding="@dimen/_5dp"
            android:textStyle="bold"
            android:textSize="@dimen/x_large_text_size"
            android:text="0"
            app:layout_constraintStart_toEndOf="@id/label_caselot_qty"
            app:layout_constraintTop_toTopOf="@id/label_caselot_qty"
            app:layout_constraintBottom_toBottomOf="@id/label_caselot_qty"
            tools:ignore="RtlCompat" />

        <in.dmart.enterprise.refilling.ui.lib.view.LblTextView
            android:id="@+id/label_total_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_qty_ea"
            android:textSize="@dimen/medium_text_size"
            android:layout_marginTop="@dimen/_10dp"
            app:layout_constraintStart_toStartOf="@id/label_reenter_details"
            app:layout_constraintTop_toBottomOf="@id/label_caselot_qty" />

        <in.dmart.enterprise.refilling.ui.lib.view.CustomTextView
            android:id="@+id/tv_total_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:textSize="@dimen/medium_text_size"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:text="0"
            app:layout_constraintStart_toEndOf="@id/label_total_qty"
            app:layout_constraintTop_toTopOf="@id/label_total_qty"
            app:layout_constraintBottom_toBottomOf="@id/label_total_qty"
            tools:ignore="RtlCompat" />

        <in.dmart.enterprise.refilling.ui.lib.view.LblTextView
            android:id="@+id/label_reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reason_for_change"
            android:textSize="@dimen/medium_text_size"
            android:layout_marginTop="@dimen/l_margin"
            app:layout_constraintStart_toStartOf="@id/label_reenter_details"
            app:layout_constraintTop_toBottomOf="@id/tv_total_qty"
            tools:ignore="RtlCompat" />

        <in.dmart.enterprise.refilling.ui.lib.view.CustomEditText
            android:id="@+id/et_reason"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:minLines="2"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_marginEnd="@dimen/l_margin"
            android:background="@drawable/border_primary_rounded"
            android:padding="@dimen/_5dp"
            android:textStyle="bold"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintStart_toStartOf="@id/label_reason"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_reason"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@color/dialog_btn"
            android:layout_marginTop="@dimen/l_margin"
            app:layout_constraintTop_toBottomOf="@id/et_reason"
            app:layout_constraintEnd_toStartOf="@id/btn_edit"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/proceed"
            android:background="@color/dialog_btn"
            android:layout_marginStart="1dp"
            app:layout_constraintTop_toTopOf="@id/btn_cancel"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="RtlCompat" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>